# py_auth

./: .env.example  .env.nginx.example  .env.tailscale.example  .gitignore  CLAUDE.md  NGINX_AUTH_GATEWAY.md  README.md  app.py  generate_cert.py  pyproject.toml  test_totp.py
src/py_auth/: __init__.py  admin.py  api.py  auth.py  forms.py  models.py  time_sync.py  webauthn.py
src/py_auth/static/css/: style.css
src/py_auth/static/js/: webauthn.js
src/py_auth/templates/: base.html
src/py_auth/templates/admin/: dashboard.html  users.html
src/py_auth/templates/auth/: change_password.html  dashboard.html  first_login_setup.html  login.html  setup_2fa.html  setup_passkey.html  time_debug.html  verify_2fa.html
